# ecmwf-opendata

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
examples/: cli.rs
src/: client.rs  date.rs  error.rs  lib.rs  main.rs  request.rs  sources.rs  url_builder.rs
